--- a/index.html
+++ b/index.html
@@ -68,6 +68,59 @@
        </div>
 
        <!-- models section ends----------------------------------- -->
+
+       <div class="letters">
+        <h3>all</h3>
+        <div class="alphabet">
+            <p>a</p>
+        <p>b</p>
+        <p>c</p>
+        <p>d</p>
+        <p>e</p>
+        <p>f</p>
+        <p>g</p>
+        <p>h</p>
+        <p>i</p>
+        <p>j</p>
+        <p>k</p>
+        <p>l</p>
+        <p>m</p>
+        <p>n</p>
+        <p>o</p>
+        <p>p</p>
+        <p>q</p>
+        <p>r</p>
+        <p>s</p>
+        <p>t</p>
+        <p>u</p>
+        <p>v</p>
+        <p>w</p>
+        <p>x</p>
+        <p>y</p>
+        <p>z</p>
+        </div>
+       </div>
+
+       <!-- letters section ends----------------------------------------- -->
+
+       <div class="page_2">
+        <div class="left">
+            <img src="assets/page_2model1.avif" alt="img">
+            <h1>VOUGE / SHOT</h1>
+        </div>
+        <div class="right">
+            <img src="assets/page_2model2.avif" alt="img">
+            <div class="txt">
+                <h3>Hannah Motler <br>
+                features in a <br>
+                fashion story by <br>
+                the lake for <br>
+                Vouge new shot</h3>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi nemo numquam porro itaque natus dolor.</p>
+            </div>
+        </div>
+       </div>
     </div>
 </body>
 </html>
