--- a/index.html
+++ b/index.html
@@ -121,6 +121,29 @@
             </div>
         </div>
        </div>
+       <!-- page_2 section ends ------------------------------------------------------ -->
+
+       <div class="page_3">
+        <div class="left">
+            <div class="imgDiv_1">
+                <img src="assets/roundedTxt.png" alt="img">
+                <i class="ri-arrow-right-line"></i>
+            </div>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, libero.</h2>
+        </div>
+        <div class="right">
+            <img src="assets/page_3model.avif" alt="img">
+        </div>
+       </div>
+
+       <!-- page_3 section ends------------------------------------ -->
+
+       <div class="page_4">
+        <div class="page_4Container">
+            <img src="assets/page_4model.avif" alt="img">
+        </div>
+       </div>
+       <!-- page_4 section ends------------------------------------ -->
     </div>
 </body>
 </html>
