adding updates section

--- a/index.html
+++ b/index.html
@@ -144,6 +144,35 @@
         </div>
        </div>
        <!-- page_4 section ends------------------------------------ -->
+
+        <div class="update">
+            <h1>UPDATES</h1>
+            <div class="contentDiv">
+                <div class="elements">
+                    <p>Mens <br> Fashion</p>
+                    <h2>Khadim & Tom Ford</h2>
+                    <img src="assets/updateModel_1.avif" alt="img">
+                </div>
+                <div class="elements">
+                    <p>WOMens <br> Fashion</p>
+                    <h2 class="sec">Arena Homme</h2>
+                    <img src="assets/updateModel_2.avif" alt="img">
+                </div>
+                <div class="elements">
+                    <p>SPECIAL <br>VIEW</p>
+                    <h2>Jing For Wonderland</h2>
+                    <img src="assets/updateModel_3.avif" alt="img">
+                </div>
+                <div class="elements">
+                    <p>MODELS<br>TALK</p>
+                    <h2 class="sec_2">Glass x Belle</h2>
+                    <img src="assets/updateModel_4.avif" alt="img">
+                </div>
+            </div>
+        </div>
+
+        <!--updates section ends------------------------------------------  -->
+        
     </div>
 </body>
 </html>
