--- a/index.html
+++ b/index.html
@@ -172,7 +172,77 @@
         </div>
 
         <!--updates section ends------------------------------------------  -->
-        
+
+        <div class="page_5">
+            <div class="left">
+                <img src="assets/page_5Model.avif" alt="img">
+            </div>
+            <div class="right">
+                <div class="top">
+                    <h1>MOVIE SHOT</h1>
+                    <h3>London based Tom Mitchell has <br>
+                    a distinct aesthetic within his <br>
+                    Photography and moving image.</h3>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In maiores quidem, amet ducimus incidunt esse Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, quo. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, eos.</p>
+                </div>
+                <div class="bottom">
+                    <div class="left">
+                        <img src="assets/page_5Model2.avif" alt="img">
+                    </div>
+                    <div class="right">
+                        <img src="assets/page_5Model3.avif" alt="img">
+                    </div>
+                </div>
+            </div>
+        </div>
+          
+        <!-- page_5 section ends ------------------------------------------ -->
+
+        <div class="page_6">
+            <div class="page_6Container">
+                <img src="assets/page_6Model.avif" alt="img">
+            </div>
+        </div>
+        <!-- page_6 section ends-------------------------- -->
+
+        <div class="page_7">
+            <div class="left">
+                <img src="assets/page_7Model.avif" alt="img">
+            </div>
+            <div class="right">
+                <img src="assets/page_7Model2.avif" alt="img">
+            <div class="txt">
+                <h3>Hannah Motler <br>
+                features in a <br>
+                fashion story by <br>
+                the lake for <br>
+                Vouge new shot</h3>
+
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi nemo numquam porro itaque natus dolor.</p>
+            </div>
+        </div>
+        </div>
+
+        <!-- page_7 ends------------------------------------------------->
+
+        <div class="textAnimation">
+            <h1>PREMIER MODEL 2024</h1>
+            <h1>PREMIER MODEL 2024</h1>
+            <h1>PREMIER MODEL 2024</h1>
+            <h1>PREMIER MODEL 2024</h1>
+            <h1>PREMIER MODEL 2024</h1>
+            <h1>PREMIER MODEL 2024</h1>
+            <h1>PREMIER MODEL 2024</h1>
+        </div>
+
+        <!-- textAnimation section ends--------------------------------- -->
+
+        <div class="blog_Sec">
+            <div class="left">
+            </div>
+            <div class="right"></div>
+        </div>
     </div>
 </body>
 </html>
