--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
        <nav>
         <div class="left">
          <div class="logo">
-            <a href="#">Premier</a><span><sup>&COPY;</sup></span>
-            <p>model management</p>
+            <a href="#">Premier</a>
          </div>
          <p>Models</p>
         </div>
@@ -240,8 +239,50 @@
 
         <div class="blog_Sec">
             <div class="left">
+                <h1>BLOG</h1>
             </div>
-            <div class="right"></div>
+            <div class="right">
+                <div class="leftDiv">
+                     <p><span>B</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus nihil aliquam quam sunt nisi cum commodi harum aliquid illum officia.</p>
+                     <div class="bottom">
+                        <img src="assets/BlogModel1.avif" alt="img">
+                     </div>
+                </div>
+                <div class="rightDiv">
+                    <p><span>B</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus nihil aliquam quam sunt nisi cum commodi harum aliquid illum officia.</p>
+                    <div class="bottom">
+                        <img src="assets/BlogModel2.avif" alt="img">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- BlogSec ends------------------------------------------------- -->
+
+        <div class="footer">
+            <div class="left">
+                <div class="boxDiv">
+                    <h1>PREMIER</h1>
+                    <p>Models</p>
+                </div>
+            </div>
+            <div class="mid">
+                <p>Women / Man</p>
+            </div>
+            <div class="right">
+                <div class="topDiv">
+                    <p>Agency / Blog / Information / Contact us </p>
+                </div>
+                <div class="bottomContainer">
+                    <i class="ri-instagram-line"></i>
+                    <i class="ri-youtube-line"></i>
+                    <i class="ri-facebook-fill"></i>
+                    <i class="ri-linkedin-box-fill"></i>
+                    <i class="ri-twitter-x-line"></i>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quas cupiditate beatae exercitationem nesciunt repellendus.</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
