working on responsiveness

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="right">
             <i class="ri-search-2-line"></i>
         </div>
+        <i class="ri-menu-line"></i>
        </nav> 
        <!-- nav section ends-------------- -->
 
