working on responsiveness..

--- a/index.html
+++ b/index.html
@@ -1,290 +1,338 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
-   <link rel="stylesheet" href="style.css">
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Premier:Model Management</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="main">
-       <nav>
+      <nav>
         <div class="left">
-         <div class="logo">
+          <div class="logo">
             <a href="#">Premier</a>
-         </div>
-         <p>Models</p>
+          </div>
+          <p>Models</p>
         </div>
         <div class="mid">
-            <p>Women/Man</p>
+          <p>Women/Man</p>
         </div>
         <div class="blog">
-            <p>Agency / Blog / Information</p>
+          <p>Agency / Blog / Information</p>
         </div>
         <div class="right">
-            <i class="ri-search-2-line"></i>
+          <i class="ri-search-2-line"></i>
         </div>
         <i class="ri-menu-line"></i>
-       </nav> 
-       <!-- nav section ends-------------- -->
+      </nav>
+      <!-- nav section ends-------------- -->
 
-       <div class="hero">
+      <div class="hero">
         <div class="videoContainer">
-            <video src="assets/video.mp4" autoplay loop muted></video>
-            <div class="content">
-                <div class="up">
-                    <h1>Photography
-                        <br>and filmss
-                    </h1>
-                    <div class="box">
-                        <div class="in">
-                            <p>01</p>
-                        </div>
-                    </div>
+          <video src="assets/video.mp4" autoplay loop muted></video>
+          <div class="content">
+            <div class="up">
+              <h1>Photography <br />and filmss</h1>
+              <div class="box">
+                <div class="in">
+                  <p>01</p>
                 </div>
-                <div class="line"></div>
-                <div class="down">
-                    <p>Explore</p>
-                    <i class="ri-arrow-right-line"></i>
-                </div>
+              </div>
             </div>
-           
+            <div class="line"></div>
+            <div class="down">
+              <p>Explore</p>
+              <i class="ri-arrow-right-line"></i>
+            </div>
+          </div>
         </div>
-       </div>
+      </div>
 
-       <!-- hero section ends--------------------------------------------- -->
+      <!-- hero section ends--------------------------------------------- -->
 
-       <div class="models">
-          <div class="imgDiv">
-            <img src="assets/model1.avif" alt="img"><img src="assets/model2.avif" alt="img"><img src="assets/model3.avif" alt="img"><img src="assets/model4.avif" alt="img"><img src="assets/model5.avif" alt="img"><img src="assets/model6.avif" alt="img">
-          </div>
-          <div class="imgDiv">
-            <img src="assets/model7.avif" alt="img"><img src="assets/model8.avif" alt="img"><img src="assets/model9.avif" alt="img"><img src="assets/model10.avif" alt="img"><img src="assets/model11.avif" alt="img"><img src="assets/model12.avif" alt="img">
-          </div>
-       </div>
+      <div class="models">
+        <div class="imgDiv imgDiv_1">
+          <img src="assets/model1.avif" alt="img" /><img
+            src="assets/model2.avif"
+            alt="img"
+          /><img src="assets/model3.avif" alt="img" /><img
+            src="assets/model4.avif"
+            alt="img"
+          /><img src="assets/model5.avif" alt="img" /><img
+            src="assets/model6.avif"
+            alt="img"
+          />
+        </div>
+        <div class="imgDiv">
+          <img src="assets/model7.avif" alt="img" />
+          <img src="assets/model8.avif" class="img" alt="img" />
+          <img src="assets/model9.avif" class="img" alt="img" />
+          <img src="assets/model10.avif" class="img" alt="img" />
+          <img src="assets/model11.avif" class="img" alt="img" />
+          <img src="assets/model12.avif" class="img" alt="img" />
+        </div>
+      </div>
 
-       <!-- models section ends----------------------------------- -->
+      <!-- models section ends----------------------------------- -->
 
-       <div class="letters">
+      <div class="letters">
         <h3>all</h3>
         <div class="alphabet">
-            <p>a</p>
-        <p>b</p>
-        <p>c</p>
-        <p>d</p>
-        <p>e</p>
-        <p>f</p>
-        <p>g</p>
-        <p>h</p>
-        <p>i</p>
-        <p>j</p>
-        <p>k</p>
-        <p>l</p>
-        <p>m</p>
-        <p>n</p>
-        <p>o</p>
-        <p>p</p>
-        <p>q</p>
-        <p>r</p>
-        <p>s</p>
-        <p>t</p>
-        <p>u</p>
-        <p>v</p>
-        <p>w</p>
-        <p>x</p>
-        <p>y</p>
-        <p>z</p>
+          <p>a</p>
+          <p>b</p>
+          <p>c</p>
+          <p>d</p>
+          <p>e</p>
+          <p>f</p>
+          <p>g</p>
+          <p>h</p>
+          <p>i</p>
+          <p>j</p>
+          <p>k</p>
+          <p>l</p>
+          <p>m</p>
+          <p>n</p>
+          <p>o</p>
+          <p>p</p>
+          <p>q</p>
+          <p>r</p>
+          <p>s</p>
+          <p>t</p>
+          <p>u</p>
+          <p>v</p>
+          <p>w</p>
+          <p>x</p>
+          <p>y</p>
+          <p>z</p>
         </div>
-       </div>
+      </div>
 
-       <!-- letters section ends----------------------------------------- -->
+      <!-- letters section ends----------------------------------------- -->
 
-       <div class="page_2">
+      <div class="page_2">
         <div class="left">
-            <img src="assets/page_2model1.avif" alt="img">
-            <h1>VOUGE / SHOT</h1>
+          <img src="assets/page_2model1.avif" alt="img" />
+          <h1>VOUGE / SHOT</h1>
         </div>
         <div class="right">
-            <img src="assets/page_2model2.avif" alt="img">
-            <div class="txt">
-                <h3>Hannah Motler <br>
-                features in a <br>
-                fashion story by <br>
-                the lake for <br>
-                Vouge new shot</h3>
+          <img src="assets/page_2model2.avif" alt="img" />
+          <div class="txt">
+            <h3>
+              Hannah Motler <br />
+              features in a <br />
+              fashion story by <br />
+              the lake for <br />
+              Vouge new shot
+            </h3>
 
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi nemo numquam porro itaque natus dolor.</p>
-            </div>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
+              nemo numquam porro itaque natus dolor.
+            </p>
+          </div>
         </div>
-       </div>
-       <!-- page_2 section ends ------------------------------------------------------ -->
+      </div>
+      <!-- page_2 section ends ------------------------------------------------------ -->
 
-       <div class="page_3">
+      <div class="page_3">
         <div class="left">
-            <div class="imgDiv_1">
-                <img src="assets/roundedTxt.png" alt="img">
-                <i class="ri-arrow-right-line"></i>
-            </div>
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, libero.</h2>
+          <div class="imgDiv_1">
+            <img src="assets/roundedTxt.png" alt="img" />
+            <i class="ri-arrow-right-line"></i>
+          </div>
+          <h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia,
+            libero.
+          </h2>
         </div>
         <div class="right">
-            <img src="assets/page_3model.avif" alt="img">
+          <img src="assets/page_3model.avif" alt="img" />
         </div>
-       </div>
+      </div>
 
-       <!-- page_3 section ends------------------------------------ -->
+      <!-- page_3 section ends------------------------------------ -->
 
-       <div class="page_4">
+      <div class="page_4">
         <div class="page_4Container">
-            <img src="assets/page_4model.avif" alt="img">
+          <img src="assets/page_4model.avif" alt="img" />
         </div>
-       </div>
-       <!-- page_4 section ends------------------------------------ -->
+      </div>
+      <!-- page_4 section ends------------------------------------ -->
 
-        <div class="update">
-            <h1>UPDATES</h1>
-            <div class="contentDiv">
-                <div class="elements">
-                    <p>Mens <br> Fashion</p>
-                    <h2>Khadim & Tom Ford</h2>
-                    <img src="assets/updateModel_1.avif" alt="img">
-                </div>
-                <div class="elements">
-                    <p>WOMens <br> Fashion</p>
-                    <h2 class="sec">Arena Homme</h2>
-                    <img src="assets/updateModel_2.avif" alt="img">
-                </div>
-                <div class="elements">
-                    <p>SPECIAL <br>VIEW</p>
-                    <h2>Jing For Wonderland</h2>
-                    <img src="assets/updateModel_3.avif" alt="img">
-                </div>
-                <div class="elements">
-                    <p>MODELS<br>TALK</p>
-                    <h2 class="sec_2">Glass x Belle</h2>
-                    <img src="assets/updateModel_4.avif" alt="img">
-                </div>
-            </div>
+      <div class="update">
+        <h1>UPDATES</h1>
+        <div class="contentDiv">
+          <div class="elements">
+            <p>
+              Mens <br />
+              Fashion
+            </p>
+            <h2>Khadim & Tom Ford</h2>
+            <img src="assets/updateModel_1.avif" alt="img" />
+          </div>
+          <div class="elements">
+            <p>
+              WOMens <br />
+              Fashion
+            </p>
+            <h2 class="sec">Arena Homme</h2>
+            <img src="assets/updateModel_2.avif" alt="img" />
+          </div>
+          <div class="elements">
+            <p>SPECIAL <br />VIEW</p>
+            <h2>Jing For Wonderland</h2>
+            <img src="assets/updateModel_3.avif" alt="img" />
+          </div>
+          <div class="elements">
+            <p>MODELS<br />TALK</p>
+            <h2 class="sec_2">Glass x Belle</h2>
+            <img src="assets/updateModel_4.avif" alt="img" />
+          </div>
         </div>
+      </div>
 
-        <!--updates section ends------------------------------------------  -->
+      <!--updates section ends------------------------------------------  -->
 
-        <div class="page_5">
+      <div class="page_5">
+        <div class="left">
+          <img src="assets/page_5Model.avif" alt="img" />
+        </div>
+        <div class="right">
+          <div class="top">
+            <h1>MOVIE SHOT</h1>
+            <h3>
+              London based Tom Mitchell has <br />
+              a distinct aesthetic within his <br />
+              Photography and moving image.
+            </h3>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In
+              maiores quidem, amet ducimus incidunt esse Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Quos, quo. Lorem, ipsum dolor
+              sit amet consectetur adipisicing elit. Facere, eos.
+            </p>
+          </div>
+          <div class="bottom">
             <div class="left">
-                <img src="assets/page_5Model.avif" alt="img">
+              <img src="assets/page_5Model2.avif" alt="img" />
             </div>
             <div class="right">
-                <div class="top">
-                    <h1>MOVIE SHOT</h1>
-                    <h3>London based Tom Mitchell has <br>
-                    a distinct aesthetic within his <br>
-                    Photography and moving image.</h3>
-
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In maiores quidem, amet ducimus incidunt esse Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, quo. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, eos.</p>
-                </div>
-                <div class="bottom">
-                    <div class="left">
-                        <img src="assets/page_5Model2.avif" alt="img">
-                    </div>
-                    <div class="right">
-                        <img src="assets/page_5Model3.avif" alt="img">
-                    </div>
-                </div>
+              <img src="assets/page_5Model3.avif" alt="img" />
             </div>
+          </div>
         </div>
-          
-        <!-- page_5 section ends ------------------------------------------ -->
+      </div>
 
-        <div class="page_6">
-            <div class="page_6Container">
-                <img src="assets/page_6Model.avif" alt="img">
-            </div>
+      <!-- page_5 section ends ------------------------------------------ -->
+
+      <div class="page_6">
+        <div class="page_6Container">
+          <img src="assets/page_6Model.avif" alt="img" />
         </div>
-        <!-- page_6 section ends-------------------------- -->
+      </div>
+      <!-- page_6 section ends-------------------------- -->
 
-        <div class="page_7">
-            <div class="left">
-                <img src="assets/page_7Model.avif" alt="img">
-            </div>
-            <div class="right">
-                <img src="assets/page_7Model2.avif" alt="img">
-            <div class="txt">
-                <h3>Hannah Motler <br>
-                features in a <br>
-                fashion story by <br>
-                the lake for <br>
-                Vouge new shot</h3>
-
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi nemo numquam porro itaque natus dolor.</p>
-            </div>
+      <div class="page_7">
+        <div class="left">
+          <img src="assets/page_7Model.avif" alt="img" />
         </div>
+        <div class="right">
+          <img src="assets/page_7Model2.avif" alt="img" />
+          <div class="txt">
+            <h3>
+              Hannah Motler <br />
+              features in a <br />
+              fashion story by <br />
+              the lake for <br />
+              Vouge new shot
+            </h3>
+
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi
+              nemo numquam porro itaque natus dolor.
+            </p>
+          </div>
         </div>
+      </div>
 
-        <!-- page_7 ends------------------------------------------------->
+      <!-- page_7 ends------------------------------------------------->
 
-        <div class="textAnimation">
-            <h1>PREMIER MODEL 2024</h1>
-            <h1>PREMIER MODEL 2024</h1>
-            <h1>PREMIER MODEL 2024</h1>
-            <h1>PREMIER MODEL 2024</h1>
-            <h1>PREMIER MODEL 2024</h1>
-            <h1>PREMIER MODEL 2024</h1>
-            <h1>PREMIER MODEL 2024</h1>
+      <div class="textAnimation">
+        <h1>PREMIER MODEL 2024</h1>
+        <h1>PREMIER MODEL 2024</h1>
+        <h1>PREMIER MODEL 2024</h1>
+        <h1>PREMIER MODEL 2024</h1>
+        <h1>PREMIER MODEL 2024</h1>
+        <h1>PREMIER MODEL 2024</h1>
+        <h1>PREMIER MODEL 2024</h1>
+      </div>
+
+      <!-- textAnimation section ends--------------------------------- -->
+
+      <div class="blog_Sec">
+        <div class="left">
+          <h1>BLOG</h1>
         </div>
-
-        <!-- textAnimation section ends--------------------------------- -->
-
-        <div class="blog_Sec">
-            <div class="left">
-                <h1>BLOG</h1>
+        <div class="right">
+          <div class="leftDiv">
+            <p>
+              <span>B</span>Lorem ipsum dolor sit amet consectetur adipisicing
+              elit. Temporibus nihil aliquam quam sunt nisi cum commodi harum
+              aliquid illum officia.
+            </p>
+            <div class="bottom">
+              <img src="assets/BlogModel1.avif" alt="img" />
             </div>
-            <div class="right">
-                <div class="leftDiv">
-                     <p><span>B</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus nihil aliquam quam sunt nisi cum commodi harum aliquid illum officia.</p>
-                     <div class="bottom">
-                        <img src="assets/BlogModel1.avif" alt="img">
-                     </div>
-                </div>
-                <div class="rightDiv">
-                    <p><span>B</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus nihil aliquam quam sunt nisi cum commodi harum aliquid illum officia.</p>
-                    <div class="bottom">
-                        <img src="assets/BlogModel2.avif" alt="img">
-                    </div>
-                </div>
+          </div>
+          <div class="rightDiv">
+            <p>
+              <span>B</span>Lorem ipsum dolor sit amet consectetur adipisicing
+              elit. Temporibus nihil aliquam quam sunt nisi cum commodi harum
+              aliquid illum officia.
+            </p>
+            <div class="bottom">
+              <img src="assets/BlogModel2.avif" alt="img" />
             </div>
+          </div>
         </div>
+      </div>
 
-        <!-- BlogSec ends------------------------------------------------- -->
+      <!-- BlogSec ends------------------------------------------------- -->
 
-        <div class="footer">
-            <div class="left">
-                <div class="boxDiv">
-                    <h1>PREMIER</h1>
-                    <p>Models</p>
-                </div>
-            </div>
-            <div class="mid">
-                <p>Women / Man</p>
-            </div>
-            <div class="right">
-                <div class="topDiv">
-                    <p>Agency / Blog / Information / Contact us </p>
-                </div>
-                <div class="bottomContainer">
-                    <i class="ri-instagram-line"></i>
-                    <i class="ri-youtube-line"></i>
-                    <i class="ri-facebook-fill"></i>
-                    <i class="ri-linkedin-box-fill"></i>
-                    <i class="ri-twitter-x-line"></i>
-
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quas cupiditate beatae exercitationem nesciunt repellendus.</p>
-                </div>
-            </div>
+      <div class="footer">
+        <div class="left">
+          <div class="boxDiv">
+            <h1>PREMIER</h1>
+            <p>Models</p>
+          </div>
         </div>
+        <div class="mid">
+          <p>Women / Man</p>
+        </div>
+        <div class="right">
+          <div class="topDiv">
+            <p>Agency / Blog / Information / Contact us</p>
+          </div>
+          <div class="bottomContainer">
+            <i class="ri-instagram-line"></i>
+            <i class="ri-youtube-line"></i>
+            <i class="ri-facebook-fill"></i>
+            <i class="ri-linkedin-box-fill"></i>
+            <i class="ri-twitter-x-line"></i>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+              quas cupiditate beatae exercitationem nesciunt repellendus.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
